src/objects/CO_Header__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Type</label>
        <referenceTo>Account_Type__c</referenceTo>
        <relationshipLabel>CO Headers</relationshipLabel>
        <relationshipName>CO_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Archived_Date_Time__c</fullName>
        <label>Archived Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
    	<fullName>Closed_Date_Time__c</fullName>
	    <label>Closed Date Time</label>
	    <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CO_Salesperson_Names__c</fullName>
        <label>CO Salesperson Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Type__c</fullName>
        <description>Customer order types</description>
        <label>CO Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Cash Sale</fullName>
                </value>
                <value>
                    <fullName>Internal Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesperson_Names__c</fullName>
        <label>Salesperson Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <formula>TEXT(
 FLOOR(now() - CreatedDate)
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD((now() - CreatedDate)*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((now() - CreatedDate)*1440,60),0)
) &amp;&quot; Minutes &quot;</formula>
        <label>Created Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>IF( !ISBLANK(Customer__r.Name) , Customer__r.Name, 
    IF( ISPICKVAL(CO_Type__c , &apos;Cash Sale&apos;)  , &apos;CASH SALE&apos;, 
       IF(ISPICKVAL(CO_Type__c , &apos;Internal Service&apos;), &apos;UNIT INVENTORY&apos;, &apos;&apos;) ) )</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Number__c</fullName>
        <label>Customer PO#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Shipping Address</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CO Headers (Customer Shipping Address)</relationshipLabel>
        <relationshipName>CO_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CO Headers</relationshipLabel>
        <relationshipName>CO_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CO Headers</relationshipLabel>
        <relationshipName>CO_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Header_Total__c</fullName>
        <formula>Deal_Subtotal__c +  Deal_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Header Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Subtotal__c</fullName>
        <label>Deal Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Tax_Amount__c</fullName>
        <label>Deal Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Total__c</fullName>
        <label>Deal Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Markup_From_Prive_Level__c</fullName>
        <label>Discount-Markup From Prive Level</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fees_Bulk_Discount_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fees Bulk Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hide_Merchandise_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Merchandise Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoiced_Amount__c</fullName>
        <label>Invoiced Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Legacy_CO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Legacy CO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Override_Merch_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Override Merch Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Tax_Based_On_Customer_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tax Based On Customer Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labour_Rate_From_Price_Level__c</fullName>
        <label>Labour Rate From Price Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Merch_Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merch Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>CO Headers</relationshipLabel>
        <relationshipName>CO_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Comment__c</fullName>
        <description>Contains last internal comment from CO Header.</description>
        <label>Last Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Headers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Merchandise_Commit_Order_controls__c</fullName>
        <label>Merchandise Commit Order controls</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commit and order</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Commit only</fullName>
                </value>
                <value>
                    <fullName>Uncommitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchandise_Notes_For_Customer__c</fullName>
        <description>Notes for customer in Merchandise section.</description>
        <inlineHelpText>Notes for customer in Merchandise section.</inlineHelpText>
        <label>Merchandise Notes For Customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Merchandise_Pre_Tax_Fee_Total__c</fullName>
        <label>Merchandise Pre Tax Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchandise_Pre_Tax_Part_Total__c</fullName>
        <label>Merchandise Pre Tax Part Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchandise_Profit__c</fullName>
        <formula>Merchandise_Pre_Tax_Part_Total__c -  Merchandise_Total_Part_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merchandise Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchandise_Sale_Type__c</fullName>
        <formula>IF( ISPICKVAL( Order_status__c , &apos;Quote&apos;), &apos;Quote&apos;, Text(Merchandise_Transaction_Type__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merchandise Sale Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchandise_Status__c</fullName>
        <label>Merchandise Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Partially Invoiced</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchandise_Sub_Total__c</fullName>
        <label>Merchandise Sub Total</label>
        <summarizedField>CO_Line_Item__c.Sub_Total_Without_Tax__c</summarizedField>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_In_Service_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_Unresolved_Fulfillment_Exists__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Related_Option_And_Fees__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Merchandise_Subtotal_When_Tax_Included__c</fullName>
        <label>Merchandise Subtotal When Tax Included</label>
        <summarizedField>CO_Line_Item__c.Subtotal_When_Tax_Included__c</summarizedField>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_Unresolved_Fulfillment_Exists__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_In_Service_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Related_Option_And_Fees__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Merchandise_Tax_Amount__c</fullName>
        <label>Merchandise Tax Amount</label>
        <summarizedField>CO_Line_Item__c.Tax_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_In_Service_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_Unresolved_Fulfillment_Exists__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Related_Option_And_Fees__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Merchandise_Total_Part_Cost__c</fullName>
        <label>Merchandise Total Part Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchandise_Total__c</fullName>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c,  Merchandise_Subtotal_When_Tax_Included__c,  Merchandise_Sub_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merchandise Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchandise_Transaction_Type__c</fullName>
        <label>Merchandise Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Part sale</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Layaway</fullName>
                </value>
                <value>
                    <fullName>Layby</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfDeals__c</fullName>
        <label>NumberOfDeals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Closed_Date__c</fullName>
        <formula>IF( Status__c == &apos;Closed&apos; , LastModifiedDate , NOW())</formula>
        <label>Order Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <formula>Invoiced_Amount__c +  Uninvoiced_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Merch_Tax_Applicable_On__c</fullName>
        <label>Override Merch Tax Applicable On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_status__c</fullName>
        <label>Order status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Last_Visited__c</fullName>
        <label>Owner Last Visited</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Price_Base_From_Price_Level__c</fullName>
        <label>Part Price Base From Price Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_And_Accessories_Invoiced_Total__c</fullName>
        <label>Parts And Accessories Invoiced Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parts_And_Accessories_Tax_Amount__c</fullName>
        <label>Parts And Accessories Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parts_And_Accessories_Total__c</fullName>
        <formula>Merchandise_Pre_Tax_Part_Total__c + Merchandise_Pre_Tax_Fee_Total__c + Parts_And_Accessories_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts And Accessories Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parts_Bulk_Discount_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Parts Bulk Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SO_Worksheet_User_selection__c</fullName>
        <label>SO Worksheet User selection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Priority__c</fullName>
        <formula>If(Status__c = &apos;Closed&apos;, 2, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Tag__c</fullName>
        <label>Search Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Group__c</fullName>
        <label>Selling Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CO_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Part Sale</fullName>
                </value>
                <value>
                    <fullName>Service Order</fullName>
                </value>
                <value>
                    <fullName>Unit Deal</fullName>
                </value>
                <value>
                    <fullName>Cash Sale</fullName>
                </value>
                <value>
                    <fullName>Internal Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Order_Subtotal__c</fullName>
        <label>Service Order Subtotal</label>
        <summarizedField>Service_Order_Header__c.Total__c</summarizedField>
        <summaryForeignKey>Service_Order_Header__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shopify_ID__c</fullName>
        <description>This field is used to store the Shopify ID of the Shopify sales transaction</description>
        <label>Shopify ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopify_Unique_ID__c</fullName>
        <description>This field contains the same value as Shopify_ID__c. It is only used to add validation for creation of unique shopify orders.</description>
        <inlineHelpText>This field contains the same value as Shopify_ID__c. It is only used to add validation for creation of unique shopify orders.</inlineHelpText>
        <label>Shopify Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Shopify_URL__c</fullName>
        <formula>IF(
	Shopify_ID__c != null,
	$Setup.Shopify_Configuration__c.Order_Base_URL__c + Shopify_ID__c,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shopify URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Order_status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfCOLI__c</fullName>
        <label>TotalNumberOfCOLI</label>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_In_Service_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_Unresolved_Fulfillment_Exists__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Related_Option_And_Fees__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfSOHeader__c</fullName>
        <label>TotalNumberOfSOHeader</label>
        <summaryFilterItems>
            <field>Service_Order_Header__c.Is_Unresolved_Fulfillment_Exists__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Service_Order_Header__c.SO_Type__c</field>
            <operation>notEqual</operation>
            <value>Deal</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Order_Header__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Balance_Due__c</fullName>
        <formula>IF((ISPICKVAL( CO_Type__c , &apos;Internal Service&apos;)) &amp;&amp; (ISPICKVAL(Order_status__c , &apos;Closed&apos;)), 0, ((Uninvoiced_Amount__c +  Invoiced_Amount__c) -   Total_Payment_Except_Charge_On_Account__c  - Total_Deposit__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_COLI_Clearfix__c</fullName>
        <label>Total COLI Clearfix</label>
        <summarizedField>CO_Line_Item__c.Sub_Total_With_Tax_Clearfix__c</summarizedField>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_In_Service_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_Unresolved_Fulfillment_Exists__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Related_Option_And_Fees__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_COLI_Tax_Amount__c</fullName>
        <label>Total COLI Tax Amount</label>
        <summarizedField>CO_Line_Item__c.Tax_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_In_Service_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_COLI__c</fullName>
        <label>Total COLI</label>
        <summarizedField>CO_Line_Item__c.Sub_Total_With_Tax__c</summarizedField>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_In_Service_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Is_Unresolved_Fulfillment_Exists__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CO_Line_Item__c.Related_Option_And_Fees__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Deposit_And_Payment__c</fullName>
        <formula>Total_Deposit__c  +  Total_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deposit And Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Deposit__c</fullName>
        <label>Total Deposit</label>
        <summarizedField>CO_Deposit__c.Amount__c</summarizedField>
        <summaryForeignKey>CO_Deposit__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Order_Tax__c</fullName>
        <label>Total Order Tax</label>
        <summarizedField>CO_Line_Item__c.Tax_Amount__c</summarizedField>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Order_Value__c</fullName>
        <description>Sum of all merchandise of CO header</description>
        <label>Total Order Value</label>
        <summarizedField>CO_Line_Item__c.Sub_Total_With_Tax__c</summarizedField>
        <summaryForeignKey>CO_Line_Item__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Payment_Except_Charge_On_Account__c</fullName>
        <label>Total Payment Except Charge On Account</label>
        <summarizedField>CO_Invoice_Header__c.Total_Amount_Except_Charge_Account__c</summarizedField>
        <summaryForeignKey>CO_Invoice_Header__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <label>Total Payment</label>
        <summarizedField>CO_Invoice_Header__c.Total_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>CO_Invoice_Header__c.Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Invoice_Header__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_SO_Tax_Amount__c</fullName>
        <label>Total SO Tax Amount</label>
        <summarizedField>Service_Order_Header__c.Tax_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Service_Order_Header__c.Is_Unresolved_Fulfillment_Exists__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Service_Order_Header__c.SO_Type__c</field>
            <operation>notEqual</operation>
            <value>Deal</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Order_Header__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_SO__c</fullName>
        <label>Total SO</label>
        <summarizedField>Service_Order_Header__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>Service_Order_Header__c.Is_Unresolved_Fulfillment_Exists__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Service_Order_Header__c.SO_Type__c</field>
            <operation>notEqual</operation>
            <value>Deal</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Order_Header__c.CO_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Total_COLI__c + Total_SO__c + Total_SO_Tax_Amount__c + Deal_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uninvoiced_Amount__c</fullName>
        <label>Uninvoiced Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Type</label>
        <referenceTo>Transaction_Type__c</referenceTo>
        <relationshipLabel>CO Headers</relationshipLabel>
        <relationshipName>CO_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CO Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Order_status__c</columns>
        <columns>Total_Balance_Due__c</columns>
        <columns>Total_Order_Value__c</columns>
        <columns>Total_Order_Tax__c</columns>
        <columns>Total_Payment__c</columns>
        <columns>Total_Deposit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CO-{0000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>